--- a/summifyExtension/manifest.json
+++ b/summifyExtension/manifest.json
@@ -1,7 +1,7 @@
-{
+ {
     "name":"Summify",
     "version":"1.0",
-    "description":"this is a summify extension",
+    "description":"this is a AI summify extension new version",
     "manifest_version":3,
     "permissions":[
         "activeTab",
